# Butterfly-Backup

./: .gitignore  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  README.md  _config.yml  bb.1  bb.man  bb.py  pyproject.toml  setup.py  test_bb.sh  utility.py
%temp%/PURELIB/: bb.py
%temp%/PURELIB/ButterflyBackup-1.0.0-py3.6.egg-info/: PKG-INFO
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bb-enhancement.md  bb-issue.md
ButterflyBackup.egg-info/: SOURCES.txt
docs/: Makefile
docs/source/: conf.py  index.rst
