[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bb", "utility"]

[project]
name = "Butterfly-Backup"
version = "1.20.0"
readme = "README.md"
license = { text = "GNU General Public License v3.0" }
keywords = [
    'backup',
    'archive',
    'restore',
    'rsync',
    'catalog',
    'list',
    'config',
    'export',
    'mirror',
    'incremental',
    'differential',
    'clone',
    'copy',
]
authors = [{ name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" }]
maintainers = [
    { name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" },
]

description = "Butterfly Backup is a simple command line wrapper of rsync for complex task, written in python."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["pansi==2020.7.3", "fabric==3.2.2"]

[project.scripts]
bb = "bb:main"

[project.urls]
homepage = "https://matteoguadrini.github.io/Butterfly-Backup/'"
documentation = "https://butterfly-backup.readthedocs.io/en/latest/"
changelog = "https://github.com/MatteoGuadrini/Butterfly-Backup/blob/master/CHANGES.md"
